Add FLUENT_BL_KVM kernel configuration

--- a/etc/etc.amd64/Makefile.inc
+++ b/etc/etc.amd64/Makefile.inc
@@ -9,6 +9,7 @@
 KERNEL_SETS=		GENERIC
 KERNEL_SETS+=		GENERIC_KASLR
 KERNEL_SETS+=		XEN3_DOM0 XEN3_DOMU
+KERNEL_SETS+=		FLUENT_BL_KVM
 # KERNEL_SETS+=		GENERIC_USERMODE
 
 BUILD_KERNELS=		INSTALL INSTALL_XEN3_DOMU
